# hishell

./: .gitignore  CMakeLists.txt  MiniGUI-raspi.cfg  README.md  env.sh  hybridos-raspi.cfg  hybridos.cfg
ace_appagent/: CMakeLists.txt
ace_appagent/src/: main.c
appagent/: BrowserWindow.cpp  BrowserWindow.h  CMakeLists.txt  Common.cpp  Common.h  WebKitBrowserWindow.cpp  WebKitBrowserWindow.h  browser_res_cn.h  browser_res_en.h  browser_res_tw.h  config.h  dockbar.c  main.c  resource.h  statusbar.c  wifi.c
cmake/: FindHiAceJS.cmake  FindSecurec.cmake
dybkgnd/: CMakeLists.txt  dybkgnd.c
hijs/: CMakeLists.txt
hijs/src/: main.c
hiweb/: CMakeLists.txt  Common.cpp  WebKitBrowserWindow.cpp  main.cpp
include/: sysconfig.h
mginit/: CMakeLists.txt  compsor-mine.c  config.h  mginit.c
samples/: himeter.html  index.html  lsql.html  stopwatch.html  watchface.html
sysmgr/: CMakeLists.txt  config.h  dockbar.c  statusbar.c  wifi.c  wifi.h
